tests/invalid/trait/method_call_missing_impl.facet
trait Runner {
  fn run(self: Self) -> ();
}

fn main() -> unrestricted () {
  (<unrestricted bool as Runner>::run true)
}
